Añadir dependencias de vault y actuator

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,1 +1,23 @@
 spring.cloud.config.uri=http://localhost:8888
+
+management.endpoints.web.exposure.include=*
+
+# Definimos un nombre para la aplicación
+spring.application.name=booking-microservice
+#Escoge un puerto aleatorio
+server.port=0
+
+#Configuracion de Eureka 1. id de la instancia
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+#Servidor de Configuracion
+spring.cloud.config.profile=dev
+
+# Vault configurations
+#nombre de la aplicación para vault
+spring.cloud.vault.application-name=booking-microservice
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
