--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
     implementation 'org.springframework.cloud:spring-cloud-config-client:3.1.4'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.4'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.5'
+    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config:3.1.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
