--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.4'
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-vault-config:3.1.1'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:3.1.2'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
